--- a/_pgbackup/index_1755507818.html
+++ b/_pgbackup/index_1755507818.html
@@ -61,7 +61,7 @@
                         <div class="md:col-span-7">
                             <h1 class="font-display text-4xl md:text-5xl uppercase leading-tight">
                             Run Smarter. Run Stronger. <span class="text-primary">Run Faster.</span> </h1>
-                            <p class="mb-4 text-base">Achieve personal bests with challenging interval workouts that are fun and creative</p>
+                            <p class="mt-3 text-base">Achieve personal bests with challenging interval workouts that are fun and creative</p>
                             <nav class="mt-6 flex flex-wrap gap-3 text-sm items-center">
                                 <a href="#about" class="link-kinetic">About</a>
                                 <span class="text-primary">•</span>
