--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
     </head>
     <body class="bg-white text-kineticBlack">
         <header class="sticky top-0 z-40 text-white border-b-2 border-primary bg-kineticBlack transition-colors">
-            <nav class="max-w-6xl mx-auto flex justify-between items-center px-4 py-3"><a href="index.html" class="flex items-baseline gap-2"> <span class="font-display uppercase tracking-tight text-xl">Track Attack</span> <span class="font-display uppercase tracking-tight text-xl text-primary">Running</span> </a>
+            <nav class="max-w-6xl mx-auto flex justify-between items-center px-4 py-3"><a href="index.html" class="flex items-baseline"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-header wordmark-invert w-auto"> </a>
                 <div class="flex items-center gap-6 text-sm"><a href="/#contact" class="px-3 py-1.5 bg-primary text-white rounded hover:bg-primaryDark transition-colors">Contact Us</a>
                 </div>
             </nav>
@@ -116,8 +116,8 @@
         </main>
         <footer class="bg-kineticBlack text-white mt-12">
             <div class="max-w-6xl mx-auto px-4 py-8">
-                <div class="flex flex-col sm:flex-row items-center justify-between gap-4"><a href="index.html" class="font-display uppercase tracking-tight text-lg">Track Attack <span class="text-primary">Running</span></a>
-                    <div class="flex items-center gap-6 text-sm"><a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a><a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a><a href="/#contact" class="hover:text-accentLight transition-colors">Contact Us</a>
+                <div class="flex flex-col sm:flex-row items-center justify-between gap-4"><a href="index.html"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-footer wordmark-invert w-auto"> </a>
+                    <div class="flex items-center gap-6 text-sm"><a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a><a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="mt-6 h-0.5 bg-gradient-to-r from-primary via-accent to-accentLight"></div>
