--- a/_pgbackup/index_1755508418.html
+++ b/_pgbackup/index_1755508418.html
@@ -48,8 +48,7 @@
     <body class="bg-white text-kineticBlack">
         <header class="sticky top-0 z-40 text-white border-b-2 border-primary bg-kineticBlack transition-colors">
             <nav class="max-w-6xl mx-auto flex justify-between items-center px-4 py-3"><a href="index.html" class="flex items-baseline"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-header wordmark-invert w-auto"> </a>
-                <div class="flex items-center gap-6 text-sm">
-                    <a href="/#contact" class="px-3 py-1.5 bg-primary text-white rounded hover:bg-primaryDark transition-colors">Contact Us</a>
+                <div class="flex items-center gap-6 text-sm"><a href="/#contact" class="px-3 py-1.5 bg-primary text-white rounded hover:bg-primaryDark transition-colors">Contact Us</a>
                 </div>
             </nav>
         </header>
@@ -63,7 +62,16 @@
                             <h1 class="font-display text-4xl md:text-5xl uppercase leading-tight">
                             Run Smarter. Run Stronger. <span class="text-primary">Run Faster.</span> </h1>
                             <p class="mb-4 text-base">Achieve personal bests with challenging interval workouts that are fun and creative</p>
-                            <nav class="mt-6 flex flex-wrap gap-3 text-sm items-center"><a href="#about" class="link-kinetic">About</a><span class="text-primary">•</span><a href="#coaches" class="link-kinetic">Coaches</a><span class="text-primary">•</span><a href="#gallery" class="link-kinetic">Gallery</a><span class="text-primary">•</span><a href="#book" class="link-kinetic">Book</a><span class="text-primary">•</span><a href="/#contact" class="link-kinetic">Contact Us</a>
+                            <nav class="mt-6 flex flex-wrap gap-3 text-sm items-center">
+                                <a href="#about" class="link-kinetic">About</a>
+                                <span class="text-primary">•</span>
+                                <a href="#coaches" class="link-kinetic">Coaches</a>
+                                <span class="text-primary">•</span>
+                                <a href="#gallery" class="link-kinetic">Gallery</a>
+                                <span class="text-primary">•</span>
+                                <a href="#book" class="link-kinetic">Book</a>
+                                <span class="text-primary">•</span>
+                                <a href="/#contact" class="link-kinetic">Contact Us</a>
                             </nav>
                         </div>
                         <div class="md:col-span-5">
@@ -104,8 +112,7 @@
                                 <!-- Left: Profile photo, name, LinkedIn -->
                                 <div class="text-left flex-shrink-0">
                                     <img src="public/tony-profile.png" alt="Tony Pelosi" class="w-40 h-40 rounded-lg mx-0 mb-3 object-cover shadow-md">
-                                    <h3 class="font-display text-lg font-bold mb-2">Tony Pelosi</h3>
-                                    <a href="https://www.linkedin.com/in/apelosi/" target="_blank" rel="noopener noreferrer" class="text-primary hover:text-primaryDark transition-colors duration-200 text-sm">
+                                    <h3 class="font-display text-lg font-bold mb-2">Tony Pelosi</h3><a href="https://www.linkedin.com/in/apelosi/" target="_blank" rel="noopener noreferrer" class="text-primary hover:text-primaryDark transition-colors duration-200 text-sm">
                                         LinkedIn </a>
                                 </div>
                                 <!-- Right: Run photo -->
@@ -123,8 +130,7 @@
                                 <!-- Left: Profile photo, name, LinkedIn -->
                                 <div class="text-left flex-shrink-0">
                                     <img src="public/chian-profile.png" alt="Chi-An Emhoff" class="w-40 h-40 rounded-lg mx-0 mb-3 object-cover shadow-md">
-                                    <h3 class="font-display text-lg font-bold mb-2">Chi-An (Wang) Emhoff</h3>
-                                    <a href="https://www.linkedin.com/in/chianemhoff/" target="_blank" rel="noopener noreferrer" class="text-primary hover:text-primaryDark transition-colors duration-200 text-sm">
+                                    <h3 class="font-display text-lg font-bold mb-2">Chi-An (Wang) Emhoff</h3><a href="https://www.linkedin.com/in/chianemhoff/" target="_blank" rel="noopener noreferrer" class="text-primary hover:text-primaryDark transition-colors duration-200 text-sm">
                                         LinkedIn </a>
                                 </div>
                                 <!-- Right: Run photo -->
@@ -188,7 +194,28 @@
                             <div class="p-4 flex flex-col items-center gap-4 w-full">
                                 <img src="public/logo-tar.svg" alt="Track Attack Running logo" class="w-28 h-auto"/>
                                 <!-- Workout names cloud fills full width; wraps responsively -->
-                                <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 xl:grid-cols-7 gap-2 w-full place-items-center text-xs font-semibold text-kineticBlack/80"><span class="px-2 py-1 bg-gray-50 rounded rotate-[-6deg] ring-1 ring-black/5">Catch‑Up Relay</span><span class="px-2 py-1 bg-gray-50 rounded rotate-3 ring-1 ring-black/5">Cutting Corners</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-3deg] ring-1 ring-black/5">Star Strides</span><span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">Coach Says…</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-8deg] ring-1 ring-black/5">ABC Drills</span><span class="px-2 py-1 bg-gray-50 rounded rotate-6 ring-1 ring-black/5">Reverse Run</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-4deg] ring-1 ring-black/5">Three Triangles</span><span class="px-2 py-1 bg-gray-50 rounded rotate-1 ring-1 ring-black/5">Lane Leaping</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-5deg] ring-1 ring-black/5">Barrel Runs</span><span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">Brains & Brawn Relay</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-7deg] ring-1 ring-black/5">Up‑Down Ladder</span><span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">Shaky Ladder</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-5deg] ring-1 ring-black/5">Continuous Relay</span><span class="px-2 py-1 bg-gray-50 rounded rotate-1 ring-1 ring-black/5">Mediard</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-3deg] ring-1 ring-black/5">Pick‑Your‑Pain</span><span class="px-2 py-1 bg-gray-50 rounded rotate-3 ring-1 ring-black/5">Twist‑And‑Shout</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-2deg] ring-1 ring-black/5">Cutting Corners</span><span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">On… Off… On!</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-6deg] ring-1 ring-black/5">The Fastest Mile</span><span class="px-2 py-1 bg-gray-50 rounded rotate-1 ring-1 ring-black/5">Claw! Claw! Claw!</span><span class="px-2 py-1 bg-gray-50 rounded rotate-[-2deg] ring-1 ring-black/5">Easium</span>
+                                <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 xl:grid-cols-7 gap-2 w-full place-items-center text-xs font-semibold text-kineticBlack/80">
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-6deg] ring-1 ring-black/5">Catch‑Up Relay</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-3 ring-1 ring-black/5">Cutting Corners</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-3deg] ring-1 ring-black/5">Star Strides</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">Coach Says…</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-8deg] ring-1 ring-black/5">ABC Drills</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-6 ring-1 ring-black/5">Reverse Run</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-4deg] ring-1 ring-black/5">Three Triangles</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-1 ring-1 ring-black/5">Lane Leaping</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-5deg] ring-1 ring-black/5">Barrel Runs</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">Brains & Brawn Relay</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-7deg] ring-1 ring-black/5">Up‑Down Ladder</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">Shaky Ladder</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-5deg] ring-1 ring-black/5">Continuous Relay</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-1 ring-1 ring-black/5">Mediard</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-3deg] ring-1 ring-black/5">Pick‑Your‑Pain</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-3 ring-1 ring-black/5">Twist‑And‑Shout</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-2deg] ring-1 ring-black/5">Cutting Corners</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-2 ring-1 ring-black/5">On… Off… On!</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-6deg] ring-1 ring-black/5">The Fastest Mile</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-1 ring-1 ring-black/5">Claw! Claw! Claw!</span>
+                                    <span class="px-2 py-1 bg-gray-50 rounded rotate-[-2deg] ring-1 ring-black/5">Easium</span>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +253,8 @@
                     <div class="mt-6">
                         <div class="rounded-xl overflow-hidden ring-1 ring-black/10 bg-white card-hover">
                             <button class="w-full px-4 py-3 flex items-center justify-between text-left hover:bg-gray-50 transition-colors" type="button" onclick="toggleLessonPlan(this)">
-                                <div class="flex items-center gap-2"><span data-icon class="inline-flex h-6 w-6 items-center justify-center rounded-full bg-primary text-white font-bold">▾</span>
+                                <div class="flex items-center gap-2">
+                                    <span data-icon class="inline-flex h-6 w-6 items-center justify-center rounded-full bg-primary text-white font-bold">▾</span>
                                     <div class="font-display text-lg">Sample Lesson Plan</div>
                                 </div>
                                 <div class="text-xs uppercase tracking-wider text-kineticBlack/60">Build Phase #7</div>
@@ -320,19 +348,18 @@
                         <input type="email" name="email" id="email" placeholder="Email" required class="border p-2 rounded text-base">
                         <textarea name="message" id="message" placeholder="Message" required class="border p-2 rounded text-base"></textarea>
                         <div data-netlify-recaptcha="true"></div>
-                        <button type="submit" id="submit-btn" class="px-4 py-2 bg-primary text-white rounded hover:bg-primary/90 transition-colors"><span id="submit-text">Submit</span><span id="submit-loading" class="hidden">Sending...</span>
+                        <button type="submit" id="submit-btn" class="px-4 py-2 bg-primary text-white rounded hover:bg-primary/90 transition-colors">
+                            <span id="submit-text">Send</span>
+                            <span id="submit-loading" class="hidden">Sending...</span>
                         </button>
                     </form>
                 </section>
             </section>
         </main>
         <footer class="bg-kineticBlack text-white">
-            <div class="max-w-6xl mx-auto px-3 py-6">
-                <div class="flex flex-row items-center justify-between gap-1">
-                    <a href="index.html"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-footer wordmark-invert w-auto"> </a>
-                    <div class="flex items-center gap-2 sm:gap-6 text-xs sm:text-sm">
-                        <a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a>
-                        <a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a>
+            <div class="max-w-6xl mx-auto px-4 py-8">
+                <div class="flex flex-row items-center justify-between gap-2"><a href="index.html"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-footer wordmark-invert w-auto"> </a>
+                    <div class="flex items-center gap-3 sm:gap-6 text-sm"><a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a><a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="mt-6 h-0.5 bg-gradient-to-r from-primary via-accent to-accentLight"></div>
