--- a/_pgbackup/index_1755508524.html
+++ b/_pgbackup/index_1755508524.html
@@ -327,10 +327,10 @@
             </section>
         </main>
         <footer class="bg-kineticBlack text-white">
-            <div class="max-w-6xl mx-auto px-3 py-6">
-                <div class="flex flex-row items-center justify-between gap-1">
+            <div class="max-w-6xl mx-auto px-4 py-8">
+                <div class="flex flex-row items-center justify-between gap-2">
                     <a href="index.html"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-footer wordmark-invert w-auto"> </a>
-                    <div class="flex items-center gap-2 sm:gap-6 text-xs sm:text-sm">
+                    <div class="flex items-center gap-3 sm:gap-6 text-sm">
                         <a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a>
                         <a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a>
                     </div>
