--- a/privacy.html
+++ b/privacy.html
@@ -115,9 +115,9 @@
             </section>
         </main>
         <footer class="bg-kineticBlack text-white mt-12">
-            <div class="max-w-6xl mx-auto px-4 py-8">
-                <div class="flex flex-col sm:flex-row items-center justify-between gap-4"><a href="index.html"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-footer wordmark-invert w-auto"> </a>
-                    <div class="flex items-center gap-6 text-sm"><a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a><a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a>
+            <div class="max-w-6xl mx-auto px-3 py-6">
+                <div class="flex flex-row items-center justify-between gap-1"><a href="index.html"> <img src="public/tartext.svg" alt="Track Attack Running" class="wordmark-footer wordmark-invert w-auto"> </a>
+                    <div class="flex items-center gap-2 sm:gap-6 text-xs sm:text-sm"><a href="terms.html" class="hover:text-accentLight transition-colors">Terms of Use</a><a href="privacy.html" class="hover:text-accentLight transition-colors">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="mt-6 h-0.5 bg-gradient-to-r from-primary via-accent to-accentLight"></div>
